--- a/build.gradle
+++ b/build.gradle
@@ -5,14 +5,14 @@ plugins {
     //id 'com.jfrog.artifactory' version '4.29.4'
     id 'application'
     id 'org.sonarqube' version '3.2.0'
-    id 'io.qameta.allure' version '2.11.2'
+    // id 'io.qameta.allure' version '2.11.2'
 }
 
 version = '1.0.3-SNAPSHOT'
 
 group = 'gradle.test'
 
-sourceCompatibility = '1.8'
+// sourceCompatibility = '1.8'
 
 repositories {
      maven {
