--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,3 @@
-systemProp.sonar.host.url=http://172.0.0.1:9000
-systemProp.sonar.projectKey=test-jenkins
-systemProp.sonar.login=squ_119dbee35923d3436c14f7b08496acb131929755
+systemProp.sonar.host.url=http://127.0.0.1:9000
+systemProp.sonar.projectKey=jenkins
+systemProp.sonar.login=squ_d2eef30a87e92df554faf8f02b1cb29effaa7021
